# vaultphrases

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  INSTALL.md  LICENSE  README.md  SECURITY.md  demo_master_key.py  pyproject.toml
src/vaultphrases/: __init__.py  cli.py  constants.py  derive.py  security.py  utils.py  wordlist.py
src/vaultphrases/data/: .gitkeep
tests/: test_derive.py  test_reproducibility.py  test_wordlist.py
