[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultphrases"
version = "0.1.0"
description = "Deterministic passphrase derivation tool for secure vault management"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "vaultphrases contributors"}
]
keywords = ["password", "passphrase", "security", "vault", "argon2", "kdf", "diceware", "deterministic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "argon2-cffi>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
vaultphrases = "vaultphrases.cli:main"

[project.urls]
Homepage = "https://github.com/n-deshpande/vaultphrases"
Repository = "https://github.com/n-deshpande/vaultphrases"
Documentation = "https://github.com/n-deshpande/vaultphrases#readme"
Issues = "https://github.com/n-deshpande/vaultphrases/issues"
Changelog = "https://github.com/n-deshpande/vaultphrases/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vaultphrases = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/vaultphrases"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
